# othello-textbook

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  ai1_forward1.cpp  ai2_negamax.cpp  ai3_negaalpha.cpp  ai4_negaalpha_fast.cpp  ai5_negascout.cpp  ai6_pattern_evaluation.cpp  ai7_book.cpp  ai8_endgame_search.cpp  board.cpp  board.hpp  board_test.cc  book.hpp  cell_evaluation.cpp  cell_evaluation.hpp  docker-run.sh  endgame_evaluation.hpp  hello_test.cc  local-test.sh  main.py  pattern_mobility_surround_evaluation.hpp  run.sh  search.h
evaluation/: board.hpp
include/: board.cpp  board.hpp  cell_evaluation.cpp  cell_evaluation.hpp  const.hpp  info.cpp  info.hpp  search.hpp
src/lib/: cell_evaluation.hpp  search.hpp
tests/: board_test.cc  board_test.cpp  evaluation_test.cpp  negascout_test.cpp  utility.hpp
